syntax = "proto3";

package sdc.service;

import "sdc/discovery/discovery_messages.proto";

option java_package = "org.somda.sdc.proto.model.service";
option java_outer_classname = "Metadata";

service MetadataService {
  rpc GetMetadata(sdc.discovery.GetHost) returns (sdc.discovery.GetHostResponse) {}
}